<?xml version="1.0" encoding="utf-8"?>
<com.nenton.schools.ui.screens.auth.AuthView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.nenton.schools.MainActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <Button
                    android:id="@+id/login_cancel_btn"
                    style="@style/BlueBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/login_next_btn"
                    style="@style/BlueBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/next" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/red"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tv_create_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_big" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/login_type_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:checkedButton="@+id/new_account_rb"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/new_account_rb"
                        style="@style/BlueRadioBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/new_account" />

                    <RadioButton
                        android:id="@+id/existing_account_rb"
                        style="@style/BlueRadioBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:text="@string/existing_account" />
                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/blue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/email_address"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_email_et"
                style="@style/Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/password"
                    android:textAllCaps="true"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_big"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/login_forgot_password_btn"
                    style="@style/BlueBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/forgot_password" />
            </RelativeLayout>

            <EditText
                android:id="@+id/login_password_et"
                style="@style/Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:inputType="textPassword" />

            <LinearLayout
                android:id="@+id/login_full_name_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_full_name"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_big"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/login_full_name_et"
                    style="@style/Field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp" />
            </LinearLayout>

            <Button
                android:id="@+id/login_image_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/image"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/image"
                android:textSize="@dimen/text_size_big" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</com.nenton.schools.ui.screens.auth.AuthView>