<?xml version="1.0" encoding="utf-8"?>
<com.nenton.schools.ui.screens.account.AccountView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <TextView
                    android:id="@+id/reg_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/reg_sound"
                    android:text="Title"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_big"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/reg_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@+id/reg_help"
                    android:background="@drawable/red_btn_state"
                    android:padding="8dp"
                    android:src="@drawable/ic_volume_up_black_24dp" />

                <ImageButton
                    android:id="@+id/reg_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/red_btn_state"
                    android:padding="8dp"
                    android:src="@drawable/ic_help_black_24dp" />
            </RelativeLayout>

            <RadioGroup
                android:id="@+id/reg_type_user_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:checkedButton="@+id/reg_student_rb"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/reg_student_rb"
                    style="@style/BlueRadioBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/auth_student" />

                <RadioButton
                    android:id="@+id/reg_educator_rb"
                    style="@style/BlueRadioBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/auth_educator" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/reg_user_name"
                        style="@style/Field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/hint_name"
                        android:textAlignment="center"
                        android:textAllCaps="true" />

                    <EditText
                        android:id="@+id/reg_user_email"
                        style="@style/Field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/reg_user_id"
                        style="@style/Field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:enabled="false"
                        android:hint="@string/hint_id"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/et_user_phone"
                        style="@style/Field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_telephone"
                        android:inputType="phone"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/tv_grade"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_small" />

                    <Button
                        android:id="@+id/reg_user_grade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/light_blue_btn_state"
                        android:text="@string/hint_pickers" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/reg_account_img"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/account_profile" />

                    <Button
                        android:id="@+id/reg_classrooms"
                        style="@style/BlueBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/button_my_classrooms"
                        android:textColor="@color/blue_btn"
                        android:textSize="@dimen/text_size_small" />

                    <Button
                        android:id="@+id/reg_logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/red_btn_state"
                        android:text="@string/logout"
                        android:textColor="@color/red_btn"
                        android:textSize="@dimen/text_size_middle" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/black"
                android:padding="4dp"
                android:text="@string/tv_school_information"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_state"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_size_small" />

                    <Button
                        android:id="@+id/reg_user_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/light_blue_btn_state"
                        android:text="@string/hint_pickers" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_district"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#000000"
                        android:textSize="@dimen/text_size_small" />

                    <Button
                        android:id="@+id/reg_user_district"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/light_blue_btn_state"
                        android:text="@string/hint_pickers" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="#0000ff" />

            <RadioGroup
                android:id="@+id/reg_type_education_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/blue"
                android:checkedButton="@+id/reg_elementary_rb"
                android:orientation="horizontal"
                android:padding="4dp">

                <RadioButton
                    android:id="@+id/reg_elementary_rb"
                    style="@style/BlueRadioBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/school_elementary" />

                <RadioButton
                    android:id="@+id/reg_ir_high_rb"
                    style="@style/BlueRadioBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/school_jr_high" />

                <RadioButton
                    android:id="@+id/reg_sr_high_rb"
                    style="@style/BlueRadioBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/school_sr_high" />

                <RadioButton
                    android:id="@+id/reg_all_rb"
                    style="@style/BlueRadioBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/school_all" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/blue" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <Button
                    android:id="@+id/reg_school"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/reg_add_school"
                    android:background="@drawable/light_blue_btn_state"
                    android:text="@string/hint_pickers" />

                <ImageButton
                    android:id="@+id/reg_add_school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/light_blue_btn_state"
                    android:padding="8dp"
                    android:src="@drawable/ic_add_black_24dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <ImageButton
                    android:id="@+id/reg_geo"
                    style="@style/BlueBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@drawable/blue_btn_state"
                    android:src="@drawable/ic_place_black_24dp" />

                <ImageButton
                    android:id="@+id/reg_phone"
                    style="@style/BlueBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@+id/reg_geo"
                    android:background="@drawable/blue_btn_state"
                    android:src="@drawable/ic_call_black_24dp" />

                <ImageButton
                    android:id="@+id/reg_complete_edit"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/image" />

                <EditText
                    android:id="@+id/reg_school_position_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@+id/reg_complete_edit"
                    android:layout_toRightOf="@+id/reg_phone"
                    android:background="@color/white_transparent"
                    android:enabled="false"
                    android:minLines="3"
                    tools:text="123 Sesame Street Miami, FL 33056 305-502-3535"
                    android:textSize="@dimen/text_size_middle" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_stroke"
                    android:padding="2dp"
                    android:text="@string/account_text_switch"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_big" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/switchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:checked="false"
                    app:kswBackRadius="2dp"
                    app:kswThumbRadius="2dp"
                    app:kswTintColor="@color/blue_switch" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</com.nenton.schools.ui.screens.account.AccountView>